--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Project Documentation</title>
+  <title>Foodlay Documentation</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="assets/css/docs.css">
 </head>
@@ -12,7 +12,7 @@
     <div class="nav-inner container">
       <div class="brand">
         <div class="logo"></div>
-        <div class="title">Project Documentation</div>
+        <div class="title">Foodlay</div>
       </div>
       <nav class="nav-links" id="nav-links">
         <a href="index.html">Home</a>
@@ -30,17 +30,17 @@
   <main class="container">
     <section class="hero">
       <div class="kicker">
-        <span class="badge">Docs</span>
-        <span>Laravel and two Flutter apps</span>
+        <span class="badge">Foodlay</span>
+        <span>Single vendor restaurant management system</span>
       </div>
-      <h1>Clean, simple, and beautiful documentation</h1>
-      <p>This template provides separate pages for Laravel backend and two Flutter applications with a consistent, elegant UI.</p>
+      <h1>Documentation for Laravel backend and two Flutter apps</h1>
+      <p>Foodlay combines a robust Laravel backend with two Flutter applications, organized with a clean and consistent UI.</p>
     </section>
 
     <section class="grid">
       <a class="card" href="laravel.html">
         <h3>Laravel Backend</h3>
-        <p>Setup, environment, project structure, APIs, queues, jobs, testing, deployment.</p>
+        <p>Tech stack, admin panel, storefront (web), setup, environment, API, queues, testing, deployment.</p>
         <div class="actions">
           <span class="pill">PHP 8+</span>
           <span class="pill">Composer</span>
