--- a/flutter-app-1.html
+++ b/flutter-app-1.html
@@ -1,17 +1,19 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Flutter App 1 Documentation</title>
+  <title>Foodlay Flutter App 1 Documentation</title>
   <link rel="stylesheet" href="assets/css/docs.css">
 </head>
+
 <body>
   <header class="navbar">
     <div class="nav-inner container">
       <div class="brand">
         <div class="logo"></div>
-        <div class="title">Project Documentation</div>
+        <div class="title">Foodlay</div>
       </div>
       <nav class="nav-links">
         <a href="index.html">Home</a>
@@ -159,4 +161,5 @@ FLAVOR=dev|staging|prod</pre>
   </footer>
   <script src="assets/js/docs.js"></script>
 </body>
+
 </html>
