refactor(docs): restructure documentation assets and update navigation
Move documentation assets (images, CSS, JS, pages) into a source/ directory and update all references accordingly. Rename documentation pages to reflect actual app roles (Admin & Web, Customer App, Deliveryman App) instead of generic names (Laravel, Flutter App 1, Flutter App 2). This reorganization improves project structure and makes the documentation naming more intuitive.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Foodlay Documentation</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="assets/css/docs.css">
+  <link rel="stylesheet" href="source/assets/css/docs.css">
 </head>
 <body>
   <header class="navbar">
@@ -16,9 +16,9 @@
       </div>
       <nav class="nav-links" id="nav-links">
         <a href="index.html">Home</a>
-        <a href="laravel.html">Laravel</a>
-        <a href="flutter-app-1.html">Flutter App 1</a>
-        <a href="flutter-app-2.html">Flutter App 2</a>
+        <a href="source/pages/admin-and-web.html">Admin &amp; Web</a>
+        <a href="source/pages/customer-app.html">Customer App</a>
+        <a href="source/pages/deliveryman-app.html">Deliveryman App</a>
       </nav>
       <div class="nav-actions">
         <button class="btn" id="menu-toggle">Menu</button>
@@ -38,8 +38,8 @@
     </section>
 
     <section class="grid">
-      <a class="card" href="laravel.html">
-        <h3>Laravel Backend</h3>
+      <a class="card" href="source/pages/admin-and-web.html">
+        <h3>Admin &amp; Web</h3>
         <p>Tech stack, admin panel, storefront (web), setup, environment, API, queues, testing, deployment.</p>
         <div class="actions">
           <span class="pill">PHP 8+</span>
@@ -47,8 +47,8 @@
           <span class="pill">MySQL</span>
         </div>
       </a>
-      <a class="card" href="flutter-app-1.html">
-        <h3>Flutter App 1</h3>
+      <a class="card" href="source/pages/customer-app.html">
+        <h3>Customer App</h3>
         <p>Requirements, setup, flavors, environment, build and release, architecture, troubleshooting.</p>
         <div class="actions">
           <span class="pill">Flutter 3+</span>
@@ -56,8 +56,8 @@
           <span class="pill">Android/iOS</span>
         </div>
       </a>
-      <a class="card" href="flutter-app-2.html">
-        <h3>Flutter App 2</h3>
+      <a class="card" href="source/pages/deliveryman-app.html">
+        <h3>Deliveryman App</h3>
         <p>Requirements, setup, flavors, environment, build and release, architecture, troubleshooting.</p>
         <div class="actions">
           <span class="pill">Flutter 3+</span>
@@ -86,6 +86,6 @@
   <footer class="footer container">
     <div>Built with a minimalist, modern aesthetic for fast onboarding.</div>
   </footer>
-  <script src="assets/js/docs.js"></script>
+  <script src="source/assets/js/docs.js"></script>
 </body>
 </html>
