--- a/source/pages/admin-and-web.html
+++ b/source/pages/admin-and-web.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Foodlay Laravel Documentation</title>
-    <link rel="stylesheet" href="assets/css/docs.css">
+    <title>Foodlay Admin &amp; Web Documentation</title>
+    <link rel="stylesheet" href="../assets/css/docs.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
                 <div class="title">Foodlay</div>
             </div>
             <nav class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="laravel.html">Laravel</a>
-                <a href="flutter-app-1.html">Flutter App 1</a>
-                <a href="flutter-app-2.html">Flutter App 2</a>
+                <a href="../../index.html">Home</a>
+                <a href="./admin-and-web.html">Admin &amp; Web</a>
+                <a href="./customer-app.html">Customer App</a>
+                <a href="./deliveryman-app.html">Deliveryman App</a>
             </nav>
             <div class="nav-actions">
                 <button class="btn" id="menu-toggle">Menu</button>
@@ -182,7 +182,7 @@ gd
 exif
 intl
 zip</pre>
-                <img src="assets/images/upload/requirements.png" alt="Server requirements check" class="doc-img">
+                <img src="../assets/images/upload/requirements.png" alt="Server requirements check" class="doc-img">
             </div>
 
             <h2 id="quick-start">Quick Start Guide</h2>
@@ -207,7 +207,7 @@ zip</pre>
                     <div>Configure cron job.</div>
                     <div>Create zone and add first food item.</div>
                 </div>
-                <img src="assets/images/upload/business-setup.png" alt="Business setup screen" class="doc-img">
+                <img src="../assets/images/upload/business-setup.png" alt="Business setup screen" class="doc-img">
             </div>
 
             <h2 id="installation-process">Installation Process</h2>
@@ -218,7 +218,7 @@ zip</pre>
                     <div>Step B: Create DB user and password.</div>
                     <div>Step C: Assign ALL PRIVILEGES to the user.</div>
                 </div>
-                <img src="assets/images/upload/database-setup.png" alt="Database setup wizard" class="doc-img">
+                <img src="../assets/images/upload/database-setup.png" alt="Database setup wizard" class="doc-img">
                 <h3>Extraction &amp; Setup</h3>
                 <div class="list">
                     <div>Upload and unzip install.zip to server root.</div>
@@ -231,9 +231,11 @@ zip</pre>
                     <div>Enter DB credentials and purchase code.</div>
                     <div>Finish and log in to Admin Panel.</div>
                 </div>
-                <img src="assets/images/upload/purchase-verification.png" alt="Purchase verification" class="doc-img">
-                <img src="assets/images/upload/finalize installation.png" alt="Finalize installation" class="doc-img">
-                <img src="assets/images/upload/installation-success.png" alt="Installation success" class="doc-img">
+                <img src="../assets/images/upload/purchase-verification.png" alt="Purchase verification"
+                    class="doc-img">
+                <img src="../assets/images/upload/finalize installation.png" alt="Finalize installation"
+                    class="doc-img">
+                <img src="../assets/images/upload/installation-success.png" alt="Installation success" class="doc-img">
             </div>
 
             <h2 id="configuration">Configuration</h2>
@@ -466,9 +468,9 @@ Route::get('/admin', fn () =&gt; Inertia::render('AdminPanel/Dashboard'));</pre>
     </main>
 
     <footer class="footer container">
-        <div>Laravel backend documentation</div>
+        <div>Admin &amp; Web documentation</div>
     </footer>
-    <script src="assets/js/docs.js"></script>
+    <script src="../assets/js/docs.js"></script>
 </body>
 
 </html>
