--- a/source/pages/deliveryman-app.html
+++ b/source/pages/deliveryman-app.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Foodlay Flutter App 1 Documentation</title>
-  <link rel="stylesheet" href="assets/css/docs.css">
+  <title>Foodlay Deliveryman App Documentation</title>
+  <link rel="stylesheet" href="../assets/css/docs.css">
 </head>
 
 <body>
@@ -16,10 +16,10 @@
         <div class="title">Foodlay</div>
       </div>
       <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="laravel.html">Laravel</a>
-        <a href="flutter-app-1.html">Flutter App 1</a>
-        <a href="flutter-app-2.html">Flutter App 2</a>
+        <a href="../../index.html">Home</a>
+        <a href="./admin-and-web.html">Admin &amp; Web</a>
+        <a href="./customer-app.html">Customer App</a>
+        <a href="./deliveryman-app.html">Deliveryman App</a>
       </nav>
       <div class="nav-actions">
         <button class="btn" id="menu-toggle">Menu</button>
@@ -54,9 +54,9 @@
       <h2 id="overview">Overview</h2>
       <div class="section">
         <div class="list">
-          <div>Flutter application connecting to Laravel backend</div>
-          <div>Supports authentication, product browsing, and ordering</div>
-          <div>Targets Android and iOS platforms</div>
+          <div>Second Flutter application integrated with Laravel backend</div>
+          <div>Distinct feature set and UI components</div>
+          <div>Separate flavors and configuration</div>
         </div>
       </div>
 
@@ -157,9 +157,9 @@ FLAVOR=dev|staging|prod</pre>
   </main>
 
   <footer class="footer container">
-    <div>Flutter App 1 documentation</div>
+    <div>Deliveryman App documentation</div>
   </footer>
-  <script src="assets/js/docs.js"></script>
+  <script src="../assets/js/docs.js"></script>
 </body>
 
 </html>
