--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="source/assets/css/docs.css">
 </head>
+
 <body>
   <header class="navbar">
     <div class="nav-inner container">
@@ -29,13 +31,9 @@
 
   <main class="container">
     <section class="hero">
-      <div class="kicker">
-        <span class="badge">Foodlay</span>
-        <span>Single vendor restaurant management system</span>
-      </div>
-      <h1>Documentation for Laravel backend and two Flutter apps</h1>
-      <p>Foodlay combines a robust Laravel backend with two Flutter applications, organized with a clean and consistent UI.</p>
-    </section>
+      <h1>Foodlay Documentation: Admin &amp; Web, Customer, Deliveryman</h1>
+      <p>Comprehensive guides for the Laravel backend and both Flutter apps, covering Quick Start, installation, platform configuration, localization &amp; RTL, theming, Maps API keys, API integration, build/signing, deployment, and troubleshooting.</p>
+        UI.</p>
 
     <section class="grid">
       <a class="card" href="source/pages/admin-and-web.html">
@@ -49,7 +47,8 @@
       </a>
       <a class="card" href="source/pages/customer-app.html">
         <h3>Customer App</h3>
-        <p>Requirements, setup, flavors, environment, build and release, architecture, troubleshooting.</p>
+        <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp; API,
+          widget/screen copy flows, signing &amp; release, troubleshooting.</p>
         <div class="actions">
           <span class="pill">Flutter 3+</span>
           <span class="pill">Dart</span>
@@ -58,25 +57,31 @@
       </a>
       <a class="card" href="source/pages/deliveryman-app.html">
         <h3>Deliveryman App</h3>
-        <p>Requirements, setup, flavors, environment, build and release, architecture, troubleshooting.</p>
+        <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp; API,
+          widget/screen copy flows, signing &amp; release, troubleshooting.</p>
         <div class="actions">
           <span class="pill">Flutter 3+</span>
           <span class="pill">Dart</span>
           <span class="pill">Android/iOS</span>
         </div>
       </a>
-      <div class="card">
-        <h3>How to use</h3>
+      <div class="card" id="help-support">
+        <h3>Help &amp; Support</h3>
         <div class="row">
           <div>
             <div class="list">
-              <div>Open a section and follow its steps</div>
-              <div>Use the sidebar to jump across topics</div>
-              <div>Toggle theme to suit your environment</div>
+              <div>Email: <a href="mailto:thedayonesoft@gmail.com">thedayonesoft@gmail.com</a></div>
+              <div>WhatsApp: <a href="https://wa.me/8801601666058" target="_blank" rel="noopener">+880 1601-666058</a>
+              </div>
+              <div>Provide logs, device/emulator info, and steps to reproduce</div>
             </div>
           </div>
           <div>
-            <pre class="code">Place your project-specific content in each page. Keep headings clear for a great sidebar experience.</pre>
+            <div class="list">
+              <div><a href="https://docs.flutter.dev" target="_blank" rel="noopener">Flutter Docs</a></div>
+              <div><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></div>
+              <div><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></div>
+            </div>
           </div>
         </div>
       </div>
@@ -88,4 +93,5 @@
   </footer>
   <script src="source/assets/js/docs.js"></script>
 </body>
+
 </html>
