docs: update footer content and improve HTML formatting
- Standardize footer copyright text across all documentation pages
- Add help and support reference in footer for consistency
- Fix HTML formatting issues and improve readability
- Update main index footer to include copyright notice

--- a/index.html
+++ b/index.html
@@ -32,64 +32,68 @@
   <main class="container">
     <section class="hero">
       <h1>Foodlay Documentation: Admin &amp; Web, Customer, Deliveryman</h1>
-      <p>Comprehensive guides for the Laravel backend and both Flutter apps, covering Quick Start, installation, platform configuration, localization &amp; RTL, theming, Maps API keys, API integration, build/signing, deployment, and troubleshooting.</p>
-        UI.</p>
+      <p>Comprehensive guides for the Laravel backend and both Flutter apps, covering Quick Start, installation,
+        platform configuration, localization &amp; RTL, theming, Maps API keys, API integration, build/signing,
+        deployment, and troubleshooting.</p>
+      UI.</p>
 
-    <section class="grid">
-      <a class="card" href="source/pages/admin-and-web.html">
-        <h3>Admin &amp; Web</h3>
-        <p>Tech stack, admin panel, storefront (web), setup, environment, API, queues, testing, deployment.</p>
-        <div class="actions">
-          <span class="pill">PHP 8+</span>
-          <span class="pill">Composer</span>
-          <span class="pill">MySQL</span>
-        </div>
-      </a>
-      <a class="card" href="source/pages/customer-app.html">
-        <h3>Customer App</h3>
-        <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp; API,
-          widget/screen copy flows, signing &amp; release, troubleshooting.</p>
-        <div class="actions">
-          <span class="pill">Flutter 3+</span>
-          <span class="pill">Dart</span>
-          <span class="pill">Android/iOS</span>
-        </div>
-      </a>
-      <a class="card" href="source/pages/deliveryman-app.html">
-        <h3>Deliveryman App</h3>
-        <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp; API,
-          widget/screen copy flows, signing &amp; release, troubleshooting.</p>
-        <div class="actions">
-          <span class="pill">Flutter 3+</span>
-          <span class="pill">Dart</span>
-          <span class="pill">Android/iOS</span>
-        </div>
-      </a>
-      <div class="card" id="help-support">
-        <h3>Help &amp; Support</h3>
-        <div class="row">
-          <div>
-            <div class="list">
-              <div>Email: <a href="mailto:thedayonesoft@gmail.com">thedayonesoft@gmail.com</a></div>
-              <div>WhatsApp: <a href="https://wa.me/8801601666058" target="_blank" rel="noopener">+880 1601-666058</a>
+      <section class="grid">
+        <a class="card" href="source/pages/admin-and-web.html">
+          <h3>Admin &amp; Web</h3>
+          <p>Tech stack, admin panel, storefront (web), setup, environment, API, queues, testing, deployment.</p>
+          <div class="actions">
+            <span class="pill">PHP 8+</span>
+            <span class="pill">Composer</span>
+            <span class="pill">MySQL</span>
+          </div>
+        </a>
+        <a class="card" href="source/pages/customer-app.html">
+          <h3>Customer App</h3>
+          <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp;
+            API,
+            widget/screen copy flows, signing &amp; release, troubleshooting.</p>
+          <div class="actions">
+            <span class="pill">Flutter 3+</span>
+            <span class="pill">Dart</span>
+            <span class="pill">Android/iOS</span>
+          </div>
+        </a>
+        <a class="card" href="source/pages/deliveryman-app.html">
+          <h3>Deliveryman App</h3>
+          <p>Quick Start, Android/iOS config, localization &amp; RTL, theme/branding, Maps API keys, mock data &amp;
+            API,
+            widget/screen copy flows, signing &amp; release, troubleshooting.</p>
+          <div class="actions">
+            <span class="pill">Flutter 3+</span>
+            <span class="pill">Dart</span>
+            <span class="pill">Android/iOS</span>
+          </div>
+        </a>
+        <div class="card" id="help-support">
+          <h3>Help &amp; Support</h3>
+          <div class="row">
+            <div>
+              <div class="list">
+                <div>Email: <a href="mailto:thedayonesoft@gmail.com">thedayonesoft@gmail.com</a></div>
+                <div>WhatsApp: <a href="https://wa.me/8801601666058" target="_blank" rel="noopener">+880 1601-666058</a>
+                </div>
+                <div>Provide logs, device/emulator info, and steps to reproduce</div>
               </div>
-              <div>Provide logs, device/emulator info, and steps to reproduce</div>
             </div>
-          </div>
-          <div>
-            <div class="list">
-              <div><a href="https://docs.flutter.dev" target="_blank" rel="noopener">Flutter Docs</a></div>
-              <div><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></div>
-              <div><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></div>
+            <div>
+              <div class="list">
+                <div><a href="https://docs.flutter.dev" target="_blank" rel="noopener">Flutter Docs</a></div>
+                <div><a href="https://laravel.com/docs" target="_blank" rel="noopener">Laravel Docs</a></div>
+                <div><a href="https://laravel.com/api" target="_blank" rel="noopener">Laravel API</a></div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
   </main>
 
   <footer class="footer container">
-    <div>Built with a minimalist, modern aesthetic for fast onboarding.</div>
+    <div>© 2026 Foodlay — Documentation for Admin &amp; Web, Customer, and Deliveryman apps.</div>
   </footer>
   <script src="source/assets/js/docs.js"></script>
 </body>
