--- a/source/pages/admin-and-web.html
+++ b/source/pages/admin-and-web.html
@@ -457,7 +457,7 @@ Route::get('/admin', fn () =&gt; Inertia::render('AdminPanel/Dashboard'));</pre>
     </main>
 
     <footer class="footer container">
-        <div>Admin &amp; Web documentation</div>
+        <div>© 2026 Foodlay — Admin &amp; Web documentation. Need help? See Home &gt; Help &amp; Support.</div>
     </footer>
     <script src="../assets/js/docs.js"></script>
 </body>
