--- a/source/pages/customer-app.html
+++ b/source/pages/customer-app.html
@@ -303,7 +303,7 @@ FLAVOR=dev|staging|prod</pre>
   </main>
 
   <footer class="footer container">
-    <div>Customer App documentation</div>
+    <div>© 2026 Foodlay — Customer app documentation. Need help? See Home &gt; Help &amp; Support.</div>
   </footer>
   <script src="../assets/js/docs.js"></script>
 </body>
