--- a/source/pages/deliveryman-app.html
+++ b/source/pages/deliveryman-app.html
@@ -62,7 +62,8 @@
     <section class="content">
       <h2 id="overview">Overview</h2>
       <div class="section">
-        <p><strong>Foodlay Deliveryman App</strong> is a dedicated companion app for delivery partners, built with Flutter for Android and iOS.</p>
+        <p><strong>Foodlay Deliveryman App</strong> is a dedicated companion app for delivery partners, built with
+          Flutter for Android and iOS.</p>
         <h3>Highlights</h3>
         <div class="list">
           <div>Clean logistics-oriented UI</div>
@@ -276,7 +277,7 @@ FLAVOR=dev|staging|prod</pre>
   </main>
 
   <footer class="footer container">
-    <div>Deliveryman App documentation</div>
+    <div>© 2026 Foodlay — Deliveryman app documentation. Need help? See Home &gt; Help &amp; Support.</div>
   </footer>
   <script src="../assets/js/docs.js"></script>
 </body>
