--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
   <header class="navbar">
     <div class="nav-inner container">
-      <div class="brand">
+      <a class="brand" href="index.html">
         <div class="logo"></div>
         <div class="title">Foodlay</div>
-      </div>
+      </a>
       <nav class="nav-links" id="nav-links">
         <a href="index.html">Home</a>
         <a href="source/pages/admin-and-web.html">Admin &amp; Web</a>
