--- a/source/pages/admin-and-web.html
+++ b/source/pages/admin-and-web.html
@@ -11,10 +11,10 @@
 <body>
     <header class="navbar">
         <div class="nav-inner container">
-            <div class="brand">
+            <a class="brand" href="../../index.html">
                 <div class="logo"></div>
                 <div class="title">Foodlay</div>
-            </div>
+            </a>
             <nav class="nav-links">
                 <a href="../../index.html">Home</a>
                 <a href="./admin-and-web.html">Admin &amp; Web</a>
